--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ h4 {
   background-color: rgb(141, 182, 141);
   display: flex;
   flex-direction: column;
-  max-width: 60vw;
+  width: 60vw;
 }
 
 .filtered-section {
@@ -60,7 +60,6 @@ h4 {
 .aggregate-display {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   background-color: teal;
   width: 40vw;
   padding: 1rem;
