--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ h4 {
   padding: 1rem 0 0 0;
 }
 
+h5 {
+  padding: 0.5rem 0 0 0;
+}
+
 .main{
   display: flex;
 }
@@ -24,7 +28,7 @@ h4 {
   background-color: rgb(144, 217, 240);
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem 1rem;
 }
 
 .navigation-category {
